# ariadne-codegen-hasura

./: README.md  main.py  pyproject.toml
gql_client/: client.py  election_data_query.py  enums.py  guide_data_query.py  guide_data_query_single.py  input_types.py  insert_brand.py  insert_guide.py  insert_selection.py  insert_viewpoint.py  update_brand.py  update_guide.py  update_selection.py  update_selections_many.py  update_viewpoint.py  update_viewpoints_many.py
