[tool.poetry]
name = "ariadne-codegen-hasura"
version = "0.1.0"
description = ""
authors = ["acgourley <acgourley@gmail.com>"]
readme = "README.md"
packages = [{include = "ariadne_codegen_hasura"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.9.2"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
